[workspace]
resolver = "2"
members = [
    "crates/signedpulse-common",
    "crates/signedpulse-server",
    "crates/signedpulse-client",
    "xtask",
]
# `cargo build`/`cargo test` (no -p) operate on the real crates only; xtask is
# built on demand via `cargo deploy`.
default-members = [
    "crates/signedpulse-common",
    "crates/signedpulse-server",
    "crates/signedpulse-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "PolyForm-Noncommercial-1.0.0"

[workspace.dependencies]
signedpulse-common = { path = "crates/signedpulse-common" }

tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "process",
    "signal",
    "sync",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
rand = "0.8"
base64 = "0.22"
thiserror = "1"
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
