[workspace]
resolver = "2"
members = [
    "crates/signedpulse-common",
    "crates/signedpulse-server",
    "crates/signedpulse-client",
    "crates/signedpulse",
    "xtask",
]
# The `signedpulse` umbrella crate owns the two installable binaries
# (`cargo install signedpulse`); the others are libraries. xtask is built on
# demand via `cargo deploy`.
default-members = [
    "crates/signedpulse-common",
    "crates/signedpulse-server",
    "crates/signedpulse-client",
    "crates/signedpulse",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "PolyForm-Noncommercial-1.0.0"
# Public repository (shown on crates.io).
repository = "https://github.com/aallamaa/signedpulse"
# Shown on each crate's crates.io page. Inherited via `readme.workspace = true`;
# the path is resolved relative to this workspace root.
readme = "README.md"

[workspace.dependencies]
# Internal crates carry a version (alongside the path) so they resolve from
# crates.io once published — `cargo publish` drops the path automatically.
signedpulse-common = { path = "crates/signedpulse-common", version = "0.1.0" }
signedpulse-server = { path = "crates/signedpulse-server", version = "0.1.0" }
signedpulse-client = { path = "crates/signedpulse-client", version = "0.1.0" }

tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "process",
    "signal",
    "sync",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
rand = "0.8"
base64 = "0.22"
thiserror = "1"
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
