[package]
name = "signedpulse-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared protocol, crypto, and config types for SignedPulse"
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ed25519-dalek.workspace = true
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets", "zeroize"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand.workspace = true
base64.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
