[package]
name = "signedpulse-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SignedPulse server: verifies signed UDP pulses and runs a hook command"
repository.workspace = true
readme.workspace = true

[dependencies]
signedpulse-common.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
zeroize.workspace = true
async-trait = "0.1"

[dev-dependencies]
serde_json.workspace = true
base64.workspace = true
rand.workspace = true
toml.workspace = true
